--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "我干了什么 究竟拿了时间换了什么"
+description: "좋아하는 것과 잘하는 것의 간극을 좁히기 위해"
 ---
 
 {% for post in paginator.posts %}
