--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "좋아하는 것과 잘하는 것의 간극을 좁히기 위해"
+description: "BE YOURSELF. Everyone else is already taken."
 ---
 
 {% for post in paginator.posts %}
