about 페이지에도 댓글기능 추가

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "你是我的梦想"
+description: "About Mihyun"
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
@@ -13,3 +13,11 @@ multilingual: true
     {% capture about_en %}{% include about/en.md %}{% endcapture %}
     {{ about_en | markdownify }}
 </div>
+
+<script src="https://utteranc.es/client.js"
+        repo="MilenaLee/milenalee.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
