--- a/about.html
+++ b/about.html
@@ -37,3 +37,4 @@ multilingual: true
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
 </script>
+{% endif %}
