--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@ multilingual: true
 
 <!-- English Version -->
 <div class="en post-container">
-    {% capture about_en %}{% include about/en.md %}{% endcapture %}
-    {{ about_en | markdownify }}
+    {% capture about_ko %}{% include about/ko.md %}{% endcapture %}
+    {{ about_ko | markdownify }}
 </div>
 
 {% if site.disqus_username %}
